@@ -7,7 +7,7 @@
   <property name="sessions" type="empty">
     <property name="Failsafe" type="empty">
       <property name="IsFailsafe" type="bool" value="true"/>
-      <property name="Count" type="int" value="4"/>
+      <property name="Count" type="int" value="5"/>
       <property name="Client0_Command" type="array">
         <value type="string" value="xfwm4"/>
       </property>
@@ -25,6 +25,10 @@
         <value type="string" value="xfdesktop"/>
       </property>
       <property name="Client3_PerScreen" type="bool" value="false"/>
+      <property name="Client4_Command" type="array">
+        <value type="string" value="xfce4-settings-helper"/>
+      </property>
+      <property name="Client4_PerScreen" type="bool" value="false"/>
     </property>
   </property>
 </channel>
