@@ -1,5 +1,10 @@
 2008-11-06	Brian Tarricone <bjt23@cornell.edu>
 
+	* settings/xfce4-session.xml: Add xfce4-settings-helper to the
+	  default failsafe session.
+
+2008-11-06	Brian Tarricone <bjt23@cornell.edu>
+
 	* xfce4-session/xfsm-manager.c: Fix a problem: client
 	  requests interaction -> client is granted interaction ->
 	  but now SM kills all other apps.  If the client then requests
